# panificadora-chask-analysis

./: .gitignore  404.html  LICENSE  Makefile  README.md.bak  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
about/: index.html
analysis/01-eda/: index.html
analysis/02-anomalies/: index.html
analysis/03-statistics/: index.html
analysis/04-roi/: index.html
analysis/overview/: index.html
api/anomaly/: index.html
api/config/: index.html
api/data_loader/: index.html
api/eda/: index.html
api/roi/: index.html
api/stats/: index.html
api/viz/: index.html
dashboard/: README.md  app.py  index.html
data/raw/: dataset_panificadora.csv
docs/: about.md  dashboard.md  findings.md  getting-started.md  index.md
docs/analysis/: 01-eda.md  02-anomalies.md  03-statistics.md  04-roi.md  overview.md
docs/api/: anomaly.md  config.md  data_loader.md  eda.md  roi.md  stats.md  viz.md
findings/: index.html
getting-started/: index.html
scripts/: build_notebooks.py  init_git_history.sh
search/: search_index.json
src/panificadora/: __init__.py  anomaly.py  config.py  data_loader.py  eda.py  roi.py  stats.py  viz.py
tests/: conftest.py  test_anomaly.py  test_dashboard.py  test_data_loader.py  test_eda.py  test_roi.py  test_stats.py  test_viz.py
